--- a/index.html
+++ b/index.html
@@ -210,16 +210,16 @@
                 <h1>Opportunities and Challenges for Tech Entrepreneurs</h1>
                 <h3>Building Innovative Solutions with EU Space Technology</h3>
                 <p>Focus on Sweden in a Nordic Context, with Global Scaling Potential</p>
-                <p>Presented by E. Désiré Nzengou</p>
-                <p><a href="mailto:nzengou@geoville.com" style="color: white;">nzengou@geoville.com</a> | October 2025</p>
-                <div class="footer">E. Désiré Nzengou | SWEO 2025, October 2025</div>
+                <!--<p>Presented by E. Désiré Nzengou</p>
+                <p><a href="mailto:#@geoville.com" style="color: white;">#@geoville.com</a> | October 2025</p>-->
+                <div class="footer">D.N. | SWEO 2025, October 2025</div>
                 <!-- Speaker Notes: Welcome the audience. Briefly introduce yourself and the topic: "Today, we'll explore how tech entrepreneurs can harness EU space tech through the CASSINI initiative, with a spotlight on Sweden's role in the Nordics and beyond." -->
             </section>
 
             <!-- Slide 13: About Me -->
             <section role="region" aria-label="About Me">
-                <h2>About Me: E. Désiré Nzengou</h2>
-                <img src="https://cdn.glitch.global/bfd04a66-a61f-4886-964d-7924f29d0346/240604_NOVASPACE-187%20(1).jpg?v=1745856711941" class="fragment fade-in" alt="E. Désiré Nzengou portrait" style="border: 1px solid #ddd; border-radius: 8px; padding: 5px; width: 200px;">
+                <h2>About Me</h2>
+                <img src="https://cdn.glitch.global/bfd04a66-a61f-4886-964d-7924f29d0346/240604_NOVASPACE-187%20(1).jpg?v=1745856711941" class="fragment fade-in" alt="D.N. portrait" style="border: 1px solid #ddd; border-radius: 8px; padding: 5px; width: 200px;">
                 <ul class="fragment fade-in">
                     <li><strong>Background</strong>: B.A. Industrial Sciences, M.A. Engineering Physics, Data Science Certificate (Johns Hopkins), Management (ICHEC)</li>
                     <li><strong>Experience</strong>: 4-5 years as Space Downstream Innovation & Market Development Consultant at EUSPA’s Entrepreneurship Unit, mentoring startups in space tech, AI, Blockchain, Quantum</li>
@@ -227,7 +227,7 @@
                     <li><strong>Relevance</strong>: Expertise in leveraging EU space data (Copernicus, Galileo) for diverse sectors, aligning with EU’s goal to boost disruptive innovation</li>
                 </ul>
                 <p class="quote fragment fade-in">My journey empowers me to guide innovative organizations toward impactful solutions.</p>
-                <div class="footer">E. Désiré Nzengou | SWEO 2025, October 2025</div>
+                <div class="footer">D.N. | SWEO 2025, October 2025</div>
                 <!-- Speaker Notes: My academic background in engineering and data science, combined with my role at EUSPA, equips me to provide actionable insights for leveraging space tech. My experience with CASSINI initiatives ensures I understand the ecosystem’s needs and opportunities. -->
             </section>
 
@@ -241,7 +241,7 @@
                     <li><strong>Downstream Markets</strong>: Applications in agriculture, energy, health, gaming</li>
                 </ul>
                 <p class="quote fragment fade-in">Free EU space data fuels entrepreneurial innovation.</p>
-                <div class="footer">E. Désiré Nzengou | SWEO 2025, October 2025</div>
+                <div class="footer">D.N. | SWEO 2025, October 2025</div>
                 <!-- Speaker Notes: The EU Space Programme provides vast, free data resources. Copernicus offers high-resolution EO imagery, while Galileo delivers accurate PNT – essential for location-based innovations. -->
             </section>
 
@@ -254,7 +254,7 @@
                     <li><strong>EUSPA</strong>: Manages Galileo/Copernicus, drives downstream innovation</li>
                     <li><strong>Sweden/Nordics</strong>: ESA-BIC Sweden, Kiruna, Nordic sustainability focus</li>
                 </ul>
-                <div class="footer">E. Désiré Nzengou | SWEO 2025, October 2025</div>
+                <div class="footer">D.N. | SWEO 2025, October 2025</div>
                 <!-- Speaker Notes: CASSINI, run by EUSPA, is designed to empower entrepreneurs like you. It’s not just funding – it’s a full ecosystem for turning space data into viable businesses. In Sweden, this aligns with our innovation hubs, and the Nordics offer collaborative potential for cross-border scaling. -->
             </section>
 
@@ -267,7 +267,7 @@
                     <li><strong>Markets</strong>: Gaming, energy, health, carbon markets</li>
                     <li><strong>Nordic Strengths</strong>: Talent, green economy, global networks</li>
                 </ul>
-                <div class="footer">E. Désiré Nzengou | SWEO 2025, October 2025</div>
+                <div class="footer">D.N. | SWEO 2025, October 2025</div>
                 <!-- Speaker Notes: Opportunities abound: Free data lowers barriers, CASSINI provides capital, and Sweden’s Nordic context offers a testbed for sustainable solutions with global appeal. -->
             </section>
 
@@ -280,7 +280,7 @@
                     <li><strong>Nordic</strong>: Climates; Talent available but at small scale and unevenly distributed; Small markets spread across large areas; Cross-border collaboration</li>
                 </ul>
                 <p class="quote fragment fade-in">CASSINI empowers startups to overcome barriers and scale globally.</p>
-                <div class="footer">E. Désiré Nzengou | SWEO 2025, October 2025</div>
+                <div class="footer">D.N. | SWEO 2025, October 2025</div>
                 <!-- Speaker Notes: Challenges exist, like data integration and market entry, but CASSINI’s tools – from hackathons to accelerators – help overcome them, especially in the collaborative Nordic environment. -->
             </section>
 
@@ -295,7 +295,7 @@
 						<ol>Lack of organization's cultural diversity shades opportunities beyond EU & US (especially emerging and developing economies)</ol></li>
                     <li><strong>Solutions</strong>: Encourage cross-sector collaboration, locally and internationally. Incentivize risk-taking, leverage CASSINI EU-wide support. Diversify funding sources</li>
                 </ul>
-                <div class="footer">E. Désiré Nzengou | SWEO 2025, October 2025</div>
+                <div class="footer">D.N. | SWEO 2025, October 2025</div>
                 <!-- Speaker Notes: Sweden’s ecosystem offers unique opportunities with its space infrastructure, but cultural and financial resistance can hinder growth. Strategic use of CASSINI and diverse funding can unlock its potential across industries. -->
             </section>
 
@@ -308,7 +308,7 @@
                     <li><strong>Nordic Example</strong>: Eco-themed games in Swedish landscapes</li>
                     <li><strong>Benefits</strong>: Engages users, scalable via in-app purchases</li>
                 </ul>
-                <div class="footer">E. Désiré Nzengou | SWEO 2025, October 2025</div>
+                <div class="footer">D.N. | SWEO 2025, October 2025</div>
                 <!-- Speaker Notes: In gaming, Galileo enables accurate positioning for AR experiences, while Copernicus adds real-world EO data – perfect for Sweden’s outdoor culture. -->
             </section>
 
@@ -321,7 +321,7 @@
                     <li><strong>Nordic Example</strong>: PASYFO app for allergy forecasting</li>
                     <li><strong>Benefits</strong>: Enhances public health in remote areas</li>
                 </ul>
-                <div class="footer">E. Désiré Nzengou | SWEO 2025, October 2025</div>
+                <div class="footer">D.N. | SWEO 2025, October 2025</div>
                 <!-- Speaker Notes: Healthcare benefits from EO data for environmental health insights, combined with Galileo’s tracking – a game-changer for Nordic remote communities. -->
             </section>
 
@@ -334,7 +334,7 @@
                     <li><strong>Nordic Example</strong>: Forestry management in Sweden</li>
                     <li><strong>Benefits</strong>: Supports EU Green Deal, enables carbon trading</li>
                 </ul>
-                <div class="footer">E. Désiré Nzengou | SWEO 2025, October 2025</div>
+                <div class="footer">D.N. | SWEO 2025, October 2025</div>
                 <!-- Speaker Notes: In the carbon market, Copernicus tracks deforestation and crop health, helping Swedish entrepreneurs certify sustainable practices for global buyers. -->
             </section>
 
@@ -347,7 +347,7 @@
                     <li><strong>Nordic Example</strong>: Monitoring Kiruna mining sites</li>
                     <li><strong>Benefits</strong>: Boosts efficiency, supports green mining</li>
                 </ul>
-                <div class="footer">E. Désiré Nzengou | SWEO 2025, October 2025</div>
+                <div class="footer">D.N. | SWEO 2025, October 2025</div>
                 <!-- Speaker Notes: For energy and mining, space data provides situational awareness – crucial for Sweden’s resource sector, ensuring sustainable extraction. -->
             </section>
 
@@ -360,7 +360,7 @@
                     <li><strong>Nordic Example</strong>: Sweden’s Wallenberg Centre systems</li>
                     <li><strong>Benefits</strong>: Quantum-resistant encryption, blockchain traceability</li>
                 </ul>
-                <div class="footer">E. Désiré Nzengou | SWEO 2025, October 2025</div>
+                <div class="footer">D.N. | SWEO 2025, October 2025</div>
                 <!-- Speaker Notes: A practical integration: QRNG secures satellite data streams from Copernicus and Galileo by generating unbreakable encryption keys. In Sweden’s Nordic quantum landscape, this enhances data integrity and traceability – with blockchain adding immutable records – scaling to protect international infrastructure. -->
             </section>
 
@@ -373,7 +373,7 @@
                     <li><strong>Nordic Example</strong>: Arctic rescue operations in Sweden</li>
                     <li><strong>Benefits</strong>: Enhances response times, supports civil security</li>
                 </ul>
-                <div class="footer">E. Désiré Nzengou | SWEO 2025, October 2025</div>
+                <div class="footer">D.N. | SWEO 2025, October 2025</div>
                 <!-- Speaker Notes: Leveraging conneXstream, this use case enables secure, failsafe streaming of EO data for situational awareness – vital for Sweden’s harsh Nordic environments in rescue and civil-defense, connecting actors worldwide. -->
             </section>
 
@@ -386,7 +386,7 @@
                     <li><strong>International Scale</strong>: EU markets via EUSPA, global climates</li>
                     <li><strong>CASSINI Role</strong>: Accelerator for sales, social impact</li>
                 </ul>
-                <div class="footer">E. Désiré Nzengou | SWEO 2025, October 2025</div>
+                <div class="footer">D.N. | SWEO 2025, October 2025</div>
                 <!-- Speaker Notes: Start in Sweden’s innovative Nordic context, then scale globally – CASSINI’s tools make this feasible, turning local solutions into international leaders. -->
             </section>
 
@@ -400,7 +400,7 @@
                 </ul>
                 <p class="quote fragment fade-in">Let’s innovate with EU space tech!</p>
                 <p class="fragment fade-in">Thank you! Q&A</p>
-                <div class="footer">E. Désiré Nzengou | SWEO 2025, October 2025</div>
+                <div class="footer">D.N. | SWEO 2025, October 2025</div>
                 <!-- Speaker Notes: In summary, EU Space empowers venture builders to innovate with space technology. Let’s discuss how we can make this happen at scale. Thank you! -->
             </section>
         </div>
