--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 <h3>Building Innovative Solutions with EU Space Technology</h3>
                 <p>Focus on Sweden in a Nordic Context, with Global Scaling Potential</p>
                 <!--<p>Presented by Me</p>
-                <p><a href="mailto:me@email.com" style="color: white;">me@email.com</a> | October 2025</p>-->
+                <p><a href="mailto:me@email.me" style="color: white;">me@email.me</a> | October 2025</p>-->
                 <div class="footer">D.N. | SWEO 2025, October 2025</div>
                 <!-- Speaker Notes: Welcome the audience. Briefly introduce yourself and the topic: "Today, we'll explore how tech entrepreneurs can harness EU space tech through the CASSINI initiative, with a spotlight on Sweden's role in the Nordics and beyond." -->
             </section>
@@ -234,7 +234,7 @@
             <!-- Slide 2: EU Space Programme Overview -->
             <section role="region" aria-label="EU Space Programme">
                 <h2>EU Space Programme Overview</h2>
-                <img src="https://cdn.glitch.global/a2ddbebc-d3f4-4151-a4df-5d1b58765ad0/eu-space-program.jpg" class="fragment fade-in" alt="Copernicus and Galileo satellites in orbit">
+                <img src="img/copernicus_and galileo_satellites_in_orbit.png" class="fragment fade-in" alt="Copernicus and Galileo satellites in orbit">
                 <ul class="fragment fade-in">
                     <li><strong>Copernicus</strong>: Earth Observation for environment, climate, disaster monitoring</li>
                     <li><strong>Galileo</strong>: GNSS for precise positioning, navigation, timing</li>
@@ -248,7 +248,7 @@
             <!-- Slide 3: Background on CASSINI and EUSPA -->
             <section role="region" aria-label="CASSINI and EUSPA">
                 <h2>CASSINI and EUSPA</h2>
-                <img src="https://cdn.glitch.global/a2ddbebc-d3f4-4151-a4df-5d1b58765ad0/cassini-euspa.png" class="fragment fade-in" alt="CASSINI and EUSPA logos with Kiruna spaceport">
+                <img src="img/cassini_and_euspa_logos_with_kiruna_spaceport.png" class="fragment fade-in" alt="CASSINI and EUSPA logos with Kiruna spaceport">
                 <ul class="fragment fade-in">
                     <li><strong>CASSINI (2021-2027)</strong>: €1B for startups with funding, mentoring, market access</li>
                     <li><strong>EUSPA</strong>: Manages Galileo/Copernicus, drives downstream innovation</li>
@@ -287,7 +287,7 @@
             <!-- Slide 14: Swedish Space Innovation Ecosystem -->
             <section role="region" aria-label="Swedish Space Innovation Ecosystem">
                 <h2>Swedish Space Innovation Ecosystem</h2>
-                <img src="https://cdn.glitch.global/a2ddbebc-d3f4-4151-a4df-5d1b58765ad0/sweden-map.jpg" class="fragment fade-in" alt="Map of Sweden highlighting space innovation hubs">
+                <img src="img/sweden-space-innovation-hubs-map.jpg" class="fragment fade-in" alt="Map of Sweden highlighting space innovation hubs">
                 <ul class="fragment fade-in">
                     <li><strong>Opportunities</strong>: Nationwide adoption across sectors (e.g., forestry, mining, finance and insurrance) via EU scale; Kiruna spaceport, ESA-BICs Sweden</li>
                     <li><strong>Resistance</strong>: High-risk aversion, Strong focus on Fintech and E-commerce vs low traction in Deep Tech and Space Tech tracks; Abundant pre-seed/angel funding, grants (Almi/Vinnova) create dependency.
@@ -302,7 +302,7 @@
             <!-- Slide 6: Use Case 1 – Gaming and Consumer Solutions -->
             <section role="region" aria-label="Gaming Use Case">
                 <h2>Use Case: Gaming and Consumer Solutions</h2>
-                <img src="https://cdn.glitch.global/a2ddbebc-d3f4-4151-a4df-5d1b58765ad0/ar-game.jpg" class="fragment fade-in" alt="AR game interface over Swedish forest landscape">
+                <img src="img/ar_game_interface_over_swedish_forest_landscape.png" class="fragment fade-in" alt="AR game interface over Swedish forest landscape">
                 <ul class="fragment fade-in">
                     <li><strong>Application</strong>: AR/VR games with Galileo PNT, Copernicus EO</li>
                     <li><strong>Nordic Example</strong>: Eco-themed games in Swedish landscapes</li>
@@ -315,7 +315,7 @@
             <!-- Slide 7: Use Case 2 – Healthcare -->
             <section role="region" aria-label="Healthcare Use Case">
                 <h2>Use Case: Healthcare</h2>
-                <img src="https://cdn.glitch.global/a2ddbebc-d3f4-4151-a4df-5d1b58765ad0/health-app.jpg" class="fragment fade-in" alt="Health app interface with air quality data">
+                <img src="img/health_app_interface_with_air_quality_data.png" class="fragment fade-in" alt="Health app interface with air quality data">
                 <ul class="fragment fade-in">
                     <li><strong>Application</strong>: Health apps using Copernicus EO, Galileo PNT</li>
                     <li><strong>Nordic Example</strong>: PASYFO app for allergy forecasting</li>
@@ -328,7 +328,7 @@
             <!-- Slide 8: Use Case 3 – Carbon Market -->
             <section role="region" aria-label="Carbon Market Use Case">
                 <h2>Use Case: Carbon Market</h2>
-                <img src="https://cdn.glitch.global/a2ddbebc-d3f4-4151-a4df-5d1b58765ad0/swedish-forest.jpg" class="fragment fade-in" alt="Swedish forest with carbon sequestration overlay">
+                <img src="img/swedish_forest_with_carbon_sequestration_overlay.png" class="fragment fade-in" alt="Swedish forest with carbon sequestration overlay">
                 <ul class="fragment fade-in">
                     <li><strong>Application</strong>: Copernicus EO for carbon monitoring</li>
                     <li><strong>Nordic Example</strong>: Forestry management in Sweden</li>
@@ -341,7 +341,7 @@
             <!-- Slide 9: Use Case 4 – Energy and Mining -->
             <section role="region" aria-label="Energy and Mining Use Case">
                 <h2>Use Case: Energy and Mining</h2>
-                <img src="https://cdn.glitch.global/a2ddbebc-d3f4-4151-a4df-5d1b58765ad0/mining-site.jpg" class="fragment fade-in" alt="Kiruna mining site with EO data annotations">
+                <img src="img/kiruna_mining_site_with_eo_data_annotations.png" class="fragment fade-in" alt="Kiruna mining site with EO data annotations">
                 <ul class="fragment fade-in">
                     <li><strong>Application</strong>: EO for exploration, Galileo for autonomy</li>
                     <li><strong>Nordic Example</strong>: Monitoring Kiruna mining sites</li>
@@ -354,7 +354,7 @@
             <!-- Slide 10: Disruptive Application – Quantum Technology -->
             <section role="region" aria-label="Quantum Technology Use Case">
                 <h2>Disruptive Application: Quantum Technology</h2>
-                <img src="https://cdn.glitch.global/a2ddbebc-d3f4-4151-a4df-5d1b58765ad0/quantum-diagram.jpg" class="fragment fade-in" alt="QRNG integrated with satellite data flow">
+                <img src="img/qrng_integrated_with_satellite_data_flow.png" class="fragment fade-in" alt="QRNG integrated with satellite data flow">
                 <ul class="fragment fade-in">
                     <li><strong>Application</strong>: QRNG for secure Copernicus/Galileo data</li>
                     <li><strong>Nordic Example</strong>: Sweden’s Wallenberg Centre systems</li>
@@ -367,7 +367,7 @@
             <!-- Slide 11: Use Case 5 – Secured Live Data Streaming -->
             <section role="region" aria-label="Secured Data Streaming Use Case">
                 <h2>Use Case: Secured Live Data Streaming</h2>
-                <img src="https://cdn.glitch.global/a2ddbebc-d3f4-4151-a4df-5d1b58765ad0/connexstream.jpg" class="fragment fade-in" alt="conneXstream interface over Arctic rescue map">
+                <img src="img/connexstream_interface_over_arctic_rescue_map.png" class="fragment fade-in" alt="conneXstream interface over Arctic rescue map">
                 <ul class="fragment fade-in">
                     <li><strong>Application</strong>: conneXstream for secure EO data streaming</li>
                     <li><strong>Nordic Example</strong>: Arctic rescue operations in Sweden</li>
@@ -380,7 +380,7 @@
             <!-- Slide 12: Scaling Potential -->
             <section role="region" aria-label="Scaling Potential">
                 <h2>Scaling Potential: Nordic to International</h2>
-                <img src="https://cdn.glitch.global/a2ddbebc-d3f4-4151-a4df-5d1b58765ad0/world-map.jpg" class="fragment fade-in" alt="Map showing Nordic to global expansion">
+                <img src="img/map_showing_nordic_to_global_expansion.png" class="fragment fade-in" alt="Map showing Nordic to global expansion">
                 <ul class="fragment fade-in">
                     <li><strong>Nordic Foundation</strong>: Sweden as hub, Finland/Norway testing</li>
                     <li><strong>International Scale</strong>: EU markets via EUSPA, global climates</li>
@@ -396,7 +396,7 @@
                 <ul class="fragment fade-in">
                     <li><strong>Recap</strong>: CASSINI unlocks diverse market opportunities</li>
                     <li><strong>Next Steps</strong>: Collaborate with EU space actors, explore resources</li>
-                    <li><strong>Contact</strong>: <a href="mailto:nzengou@geoville.com" style="color: white;">nzengou@geoville.com</a></li>
+                    <li><strong>Contact</strong>: <a href="mailto:me@email.me" style="color: white;">me@email.me</a></li>
                 </ul>
                 <p class="quote fragment fade-in">Let’s innovate with EU space tech!</p>
                 <p class="fragment fade-in">Thank you! Q&A</p>
