--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 
             <!-- Slide 4: Opportunities for Tech Entrepreneurs -->
             <section role="region" aria-label="Opportunities">
-                <h2>Opportunities for Tech Entrepreneurs</h2>
+                <h2>Opportunities for Tech Entrepreneurs  🎁</h2>
                 <ul class="fragment fade-in">
                     <li><strong>Free Data</strong>: Copernicus EO, Galileo PNT for cost-effective solutions</li>
                     <li><strong>Funding</strong>: CASSINI prizes, Vinnova, ESA-BIC grants</li>
@@ -273,7 +273,8 @@
 
             <!-- Slide 5: Key Challenges and Solutions -->
             <section role="region" aria-label="Challenges and Solutions">
-                <h2>Key Challenges and Solutions</h2>
+                <h2>Key Challenges and Solutions 🎯</h2>
+                <img src="img/is-sweden-in-the-new-space.png" class="fragment fade-in" alt="Is Sweden in the New Space?">
                 <ul class="fragment fade-in">
                     <li><strong>Technical</strong>: AI/data integration; solved via CASSINI mentoring</li>
                     <li><strong>Market</strong>: Viability, competition; focus on unique solutions</li>
@@ -286,7 +287,7 @@
 
             <!-- Slide 14: Swedish Space Innovation Ecosystem -->
             <section role="region" aria-label="Swedish Space Innovation Ecosystem">
-                <h2>Swedish Space Innovation Ecosystem</h2>
+                <h2>Swedish Space Innovation Ecosystem </h2>
                 <img src="img/sweden-space-innovation-hubs-map.jpg" class="fragment fade-in" alt="Map of Sweden highlighting space innovation hubs">
                 <ul class="fragment fade-in">
                     <li><strong>Opportunities</strong>: Nationwide adoption across sectors (e.g., forestry, mining, finance and insurrance) via EU scale; Kiruna spaceport, ESA-BICs Sweden</li>
@@ -301,7 +302,7 @@
 
             <!-- Slide 6: Use Case 1 – Gaming and Consumer Solutions -->
             <section role="region" aria-label="Gaming Use Case">
-                <h2>Use Case: Gaming and Consumer Solutions</h2>
+                <h2>Use Case: Gaming and Consumer Solutions 📱</h2>
                 <img src="img/ar_game_interface_over_swedish_forest_landscape.png" class="fragment fade-in" alt="AR game interface over Swedish forest landscape">
                 <ul class="fragment fade-in">
                     <li><strong>Application</strong>: AR/VR games with Galileo PNT, Copernicus EO</li>
@@ -314,7 +315,7 @@
 
             <!-- Slide 7: Use Case 2 – Healthcare -->
             <section role="region" aria-label="Healthcare Use Case">
-                <h2>Use Case: Healthcare</h2>
+                <h2>Use Case: Healthcare ⚕️</h2>
                 <img src="img/health_app_interface_with_air_quality_data.png" class="fragment fade-in" alt="Health app interface with air quality data">
                 <ul class="fragment fade-in">
                     <li><strong>Application</strong>: Health apps using Copernicus EO, Galileo PNT</li>
@@ -327,7 +328,7 @@
 
             <!-- Slide 8: Use Case 3 – Carbon Market -->
             <section role="region" aria-label="Carbon Market Use Case">
-                <h2>Use Case: Carbon Market</h2>
+                <h2>Use Case: Carbon Market 🌲</h2>
                 <img src="img/swedish_forest_with_carbon_sequestration_overlay.png" class="fragment fade-in" alt="Swedish forest with carbon sequestration overlay">
                 <ul class="fragment fade-in">
                     <li><strong>Application</strong>: Copernicus EO for carbon monitoring</li>
@@ -340,7 +341,7 @@
 
             <!-- Slide 9: Use Case 4 – Energy and Mining -->
             <section role="region" aria-label="Energy and Mining Use Case">
-                <h2>Use Case: Energy and Mining</h2>
+                <h2>Use Case: Energy and Mining ⛏️</h2>
                 <img src="img/kiruna_mining_site_with_eo_data_annotations.png" class="fragment fade-in" alt="Kiruna mining site with EO data annotations">
                 <ul class="fragment fade-in">
                     <li><strong>Application</strong>: EO for exploration, Galileo for autonomy</li>
@@ -353,7 +354,7 @@
 
             <!-- Slide 10: Disruptive Application – Quantum Technology -->
             <section role="region" aria-label="Quantum Technology Use Case">
-                <h2>Disruptive Application: Quantum Technology</h2>
+                <h2>Disruptive Application: Quantum Technology ⚛️</h2>
                 <img src="img/qrng_integrated_with_satellite_data_flow.png" class="fragment fade-in" alt="QRNG integrated with satellite data flow">
                 <ul class="fragment fade-in">
                     <li><strong>Application</strong>: QRNG for secure Copernicus/Galileo data</li>
@@ -366,7 +367,7 @@
 
             <!-- Slide 11: Use Case 5 – Secured Live Data Streaming -->
             <section role="region" aria-label="Secured Data Streaming Use Case">
-                <h2>Use Case: Secured Live Data Streaming</h2>
+                <h2>Use Case: Secured Live Data Streaming 🔒</h2>
                 <img src="img/connexstream_interface_over_arctic_rescue_map.png" class="fragment fade-in" alt="conneXstream interface over Arctic rescue map">
                 <ul class="fragment fade-in">
                     <li><strong>Application</strong>: conneXstream for secure EO data streaming</li>
@@ -379,8 +380,8 @@
 
             <!-- Slide 12: Scaling Potential -->
             <section role="region" aria-label="Scaling Potential">
-                <h2>Scaling Potential: Nordic to International</h2>
-                <img src="img/map_showing_nordic_to_global_expansion.png" class="fragment fade-in" alt="Map showing Nordic to global expansion">
+                <h2>Scaling Potential: Nordic to International 🌍</h2>
+                <img src="img/nordic_to_global_expansion.png" class="fragment fade-in" alt="Map showing Nordic to global expansion">
                 <ul class="fragment fade-in">
                     <li><strong>Nordic Foundation</strong>: Sweden as hub, Finland/Norway testing</li>
                     <li><strong>International Scale</strong>: EU markets via EUSPA, global climates</li>
@@ -392,7 +393,7 @@
 
             <!-- Slide 15: Conclusion and Call to Action -->
             <section class="title-slide" role="region" aria-label="Conclusion">
-                <h2 style="color: white">Conclusion and Call to Action</h2>
+                <h2 style="color: white">Conclusion 📢</h2>
                 <ul class="fragment fade-in">
                     <li><strong>Recap</strong>: CASSINI unlocks diverse market opportunities</li>
                     <li><strong>Next Steps</strong>: Collaborate with EU space actors, explore resources</li>
