--- a/index.html
+++ b/index.html
@@ -152,7 +152,13 @@
             .reveal .slides section { padding: 2em; }
             .title-slide h1 { font-size: 2em; }
             .footer { font-size: 0.7em; }
-            img { max-width: 95%; }
+            img {
+				max-width: 95%;
+				border: 1px solid #ddd; 
+				border-radius: 8px; 
+				padding: 5px; 
+				width: 300px;
+			}
             .download-btn, .share-btn {
                 font-size: 0.8em;
                 padding: 0.5em 1em;
@@ -219,7 +225,7 @@
             <!-- Slide 13: About Me -->
             <section role="region" aria-label="About Me">
                 <h2>About Me</h2>
-                <img src="https://cdn.glitch.global/bfd04a66-a61f-4886-964d-7924f29d0346/240604_NOVASPACE-187%20(1).jpg?v=1745856711941" class="fragment fade-in" alt="D.N. portrait" style="border: 1px solid #ddd; border-radius: 8px; padding: 5px; width: 200px;">
+                <img src="https://cdn.glitch.global/bfd04a66-a61f-4886-964d-7924f29d0346/240604_NOVASPACE-187%20(1).jpg?v=1745856711941" class="fragment fade-in" alt="D.N. portrait">
                 <ul class="fragment fade-in">
                     <li><strong>Background</strong>: B.A. Industrial Sciences, M.A. Engineering Physics, Data Science Certificate (Johns Hopkins), Management (ICHEC)</li>
                     <li><strong>Experience</strong>: 4-5 years as Space Downstream Innovation & Market Development Consultant at EUSPA’s Entrepreneurship Unit, mentoring startups in space tech, AI, Blockchain, Quantum</li>
@@ -248,7 +254,7 @@
             <!-- Slide 3: Background on CASSINI and EUSPA -->
             <section role="region" aria-label="CASSINI and EUSPA">
                 <h2>CASSINI and EUSPA</h2>
-                <img src="img/cassini_and_euspa_logos_with_kiruna_spaceport.png" class="fragment fade-in" alt="CASSINI and EUSPA logos with Kiruna spaceport">
+                <img src="img/img/cassini_space_logo_with_and_euspa_and_esa_texts_with_kiruna_spaceport.png" class="fragment fade-in" alt="CASSINI and EUSPA logos with Kiruna spaceport">
                 <ul class="fragment fade-in">
                     <li><strong>CASSINI (2021-2027)</strong>: €1B for startups with funding, mentoring, market access</li>
                     <li><strong>EUSPA</strong>: Manages Galileo/Copernicus, drives downstream innovation</li>
