--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             <!-- Slide 13: About Me -->
             <section role="region" aria-label="About Me">
                 <h2>About Me</h2>
-                <img src="https://cdn.glitch.global/bfd04a66-a61f-4886-964d-7924f29d0346/240604_NOVASPACE-187%20(1).jpg?v=1745856711941" class="fragment fade-in" alt="D.N. portrait">
+                <img src="https://cdn.glitch.global/bfd04a66-a61f-4886-964d-7924f29d0346/240604_NOVASPACE-187%20(1).jpg?v=1745856711941" class="fragment fade-in" alt="D.N. portrait" style="border: 1px solid #ddd; border-radius: 8px; padding: 5px; width: 300px;">
                 <ul class="fragment fade-in">
                     <li><strong>Background</strong>: B.A. Industrial Sciences, M.A. Engineering Physics, Data Science Certificate (Johns Hopkins), Management (ICHEC)</li>
                     <li><strong>Experience</strong>: 4-5 years as Space Downstream Innovation & Market Development Consultant at EUSPA’s Entrepreneurship Unit, mentoring startups in space tech, AI, Blockchain, Quantum</li>
@@ -254,7 +254,7 @@
             <!-- Slide 3: Background on CASSINI and EUSPA -->
             <section role="region" aria-label="CASSINI and EUSPA">
                 <h2>CASSINI and EUSPA</h2>
-                <img src="img/img/cassini_space_logo_with_and_euspa_and_esa_texts_with_kiruna_spaceport.png" class="fragment fade-in" alt="CASSINI and EUSPA logos with Kiruna spaceport">
+                <img src="img/cassini_space_logo_with_and_euspa_and_esa_texts_with_kiruna_spaceport.png" class="fragment fade-in" alt="CASSINI and EUSPA logos with Kiruna spaceport" style="border: 1px solid #ddd; border-radius: 8px; padding: 5px; width: 300px;">
                 <ul class="fragment fade-in">
                     <li><strong>CASSINI (2021-2027)</strong>: €1B for startups with funding, mentoring, market access</li>
                     <li><strong>EUSPA</strong>: Manages Galileo/Copernicus, drives downstream innovation</li>
@@ -280,7 +280,7 @@
             <!-- Slide 5: Key Challenges and Solutions -->
             <section role="region" aria-label="Challenges and Solutions">
                 <h2>Key Challenges and Solutions 🎯</h2>
-                <img src="img/is-sweden-in-the-new-space.png" class="fragment fade-in" alt="Is Sweden in the New Space?">
+                <img src="img/is-sweden-in-the-new-space.png" class="fragment fade-in" alt="Is Sweden in the New Space?" style="border: 1px solid #ddd; border-radius: 8px; padding: 5px; width: 300px;">
                 <ul class="fragment fade-in">
                     <li><strong>Technical</strong>: AI/data integration; solved via CASSINI mentoring</li>
                     <li><strong>Market</strong>: Viability, competition; focus on unique solutions</li>
@@ -294,7 +294,7 @@
             <!-- Slide 14: Swedish Space Innovation Ecosystem -->
             <section role="region" aria-label="Swedish Space Innovation Ecosystem">
                 <h2>Swedish Space Innovation Ecosystem </h2>
-                <img src="img/sweden-space-innovation-hubs-map.jpg" class="fragment fade-in" alt="Map of Sweden highlighting space innovation hubs">
+                <img src="img/sweden-space-innovation-hubs-map.png" class="fragment fade-in" alt="Map of Sweden highlighting space innovation hubs" style="border: 1px solid #ddd; border-radius: 8px; padding: 5px; width: 300px;">
                 <ul class="fragment fade-in">
                     <li><strong>Opportunities</strong>: Nationwide adoption across sectors (e.g., forestry, mining, finance and insurrance) via EU scale; Kiruna spaceport, ESA-BICs Sweden</li>
                     <li><strong>Resistance</strong>: High-risk aversion, Strong focus on Fintech and E-commerce vs low traction in Deep Tech and Space Tech tracks; Abundant pre-seed/angel funding, grants (Almi/Vinnova) create dependency.
@@ -309,7 +309,7 @@
             <!-- Slide 6: Use Case 1 – Gaming and Consumer Solutions -->
             <section role="region" aria-label="Gaming Use Case">
                 <h2>Use Case: Gaming and Consumer Solutions 📱</h2>
-                <img src="img/ar_game_interface_over_swedish_forest_landscape.png" class="fragment fade-in" alt="AR game interface over Swedish forest landscape">
+                <img src="img/ar_game_interface_over_swedish_forest_landscape.png" class="fragment fade-in" alt="AR game interface over Swedish forest landscape" style="border: 1px solid #ddd; border-radius: 8px; padding: 5px; width: 300px;">
                 <ul class="fragment fade-in">
                     <li><strong>Application</strong>: AR/VR games with Galileo PNT, Copernicus EO</li>
                     <li><strong>Nordic Example</strong>: Eco-themed games in Swedish landscapes</li>
@@ -335,7 +335,7 @@
             <!-- Slide 8: Use Case 3 – Carbon Market -->
             <section role="region" aria-label="Carbon Market Use Case">
                 <h2>Use Case: Carbon Market 🌲</h2>
-                <img src="img/swedish_forest_with_carbon_sequestration_overlay.png" class="fragment fade-in" alt="Swedish forest with carbon sequestration overlay">
+                <img src="img/swedish_forest_with_carbon_sequestration_overlay.png" class="fragment fade-in" alt="Swedish forest with carbon sequestration overlay" style="border: 1px solid #ddd; border-radius: 8px; padding: 5px; width: 300px;">
                 <ul class="fragment fade-in">
                     <li><strong>Application</strong>: Copernicus EO for carbon monitoring</li>
                     <li><strong>Nordic Example</strong>: Forestry management in Sweden</li>
@@ -348,7 +348,7 @@
             <!-- Slide 9: Use Case 4 – Energy and Mining -->
             <section role="region" aria-label="Energy and Mining Use Case">
                 <h2>Use Case: Energy and Mining ⛏️</h2>
-                <img src="img/kiruna_mining_site_with_eo_data_annotations.png" class="fragment fade-in" alt="Kiruna mining site with EO data annotations">
+                <img src="img/kiruna_mining_site_with_eo_data_annotations.png" class="fragment fade-in" alt="Kiruna mining site with EO data annotations" style="border: 1px solid #ddd; border-radius: 8px; padding: 5px; width: 300px;">
                 <ul class="fragment fade-in">
                     <li><strong>Application</strong>: EO for exploration, Galileo for autonomy</li>
                     <li><strong>Nordic Example</strong>: Monitoring Kiruna mining sites</li>
@@ -374,7 +374,7 @@
             <!-- Slide 11: Use Case 5 – Secured Live Data Streaming -->
             <section role="region" aria-label="Secured Data Streaming Use Case">
                 <h2>Use Case: Secured Live Data Streaming 🔒</h2>
-                <img src="img/connexstream_interface_over_arctic_rescue_map.png" class="fragment fade-in" alt="conneXstream interface over Arctic rescue map">
+                <img src="img/connexstream_interface_over_arctic_rescue_map.png" class="fragment fade-in" alt="conneXstream interface over Arctic rescue map" style="border: 1px solid #ddd; border-radius: 8px; padding: 5px; width: 300px;">
                 <ul class="fragment fade-in">
                     <li><strong>Application</strong>: conneXstream for secure EO data streaming</li>
                     <li><strong>Nordic Example</strong>: Arctic rescue operations in Sweden</li>
