--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             <!-- Slide 2: EU Space Programme Overview -->
             <section role="region" aria-label="EU Space Programme">
                 <h2>EU Space Programme Overview</h2>
-                <img src="img/copernicus_and galileo_satellites_in_orbit.png" class="fragment fade-in" alt="Copernicus and Galileo satellites in orbit">
+                <img src="img/copernicus_and galileo_satellites_in_orbit.png" class="fragment fade-in" alt="Copernicus and Galileo satellites in orbit" style="border: 1px solid #ddd; border-radius: 8px; padding: 5px; width: 300px;">
                 <ul class="fragment fade-in">
                     <li><strong>Copernicus</strong>: Earth Observation for environment, climate, disaster monitoring</li>
                     <li><strong>Galileo</strong>: GNSS for precise positioning, navigation, timing</li>
@@ -280,7 +280,7 @@
             <!-- Slide 5: Key Challenges and Solutions -->
             <section role="region" aria-label="Challenges and Solutions">
                 <h2>Key Challenges and Solutions 🎯</h2>
-                <img src="img/is-sweden-in-the-new-space.png" class="fragment fade-in" alt="Is Sweden in the New Space?" style="border: 1px solid #ddd; border-radius: 8px; padding: 5px; width: 300px;">
+                <img src="img/is-sweden-in-the-new-space.png" class="fragment fade-in" alt="Is Sweden in the New Space?" style="border: 1px solid #ddd; border-radius: 8px; padding: 5px; width: 150px;">
                 <ul class="fragment fade-in">
                     <li><strong>Technical</strong>: AI/data integration; solved via CASSINI mentoring</li>
                     <li><strong>Market</strong>: Viability, competition; focus on unique solutions</li>
@@ -322,7 +322,7 @@
             <!-- Slide 7: Use Case 2 – Healthcare -->
             <section role="region" aria-label="Healthcare Use Case">
                 <h2>Use Case: Healthcare ⚕️</h2>
-                <img src="img/health_app_interface_with_air_quality_data.png" class="fragment fade-in" alt="Health app interface with air quality data">
+                <img src="img/health_app_interface_with_air_quality_data.png" class="fragment fade-in" alt="Health app interface with air quality data" style="border: 1px solid #ddd; border-radius: 8px; padding: 5px; width: 300px;">
                 <ul class="fragment fade-in">
                     <li><strong>Application</strong>: Health apps using Copernicus EO, Galileo PNT</li>
                     <li><strong>Nordic Example</strong>: PASYFO app for allergy forecasting</li>
@@ -361,7 +361,7 @@
             <!-- Slide 10: Disruptive Application – Quantum Technology -->
             <section role="region" aria-label="Quantum Technology Use Case">
                 <h2>Disruptive Application: Quantum Technology ⚛️</h2>
-                <img src="img/qrng_integrated_with_satellite_data_flow.png" class="fragment fade-in" alt="QRNG integrated with satellite data flow">
+                <img src="img/qrng_integrated_with_satellite_data_flow.png" class="fragment fade-in" alt="QRNG integrated with satellite data flow" style="border: 1px solid #ddd; border-radius: 8px; padding: 5px; width: 300px;">
                 <ul class="fragment fade-in">
                     <li><strong>Application</strong>: QRNG for secure Copernicus/Galileo data</li>
                     <li><strong>Nordic Example</strong>: Sweden’s Wallenberg Centre systems</li>
@@ -387,7 +387,7 @@
             <!-- Slide 12: Scaling Potential -->
             <section role="region" aria-label="Scaling Potential">
                 <h2>Scaling Potential: Nordic to International 🌍</h2>
-                <img src="img/nordic_to_global_expansion.png" class="fragment fade-in" alt="Map showing Nordic to global expansion">
+                <img src="img/nordic_to_global_expansion.png" class="fragment fade-in" alt="Map showing Nordic to global expansion" style="border: 1px solid #ddd; border-radius: 8px; padding: 5px; width: 300px;">
                 <ul class="fragment fade-in">
                     <li><strong>Nordic Foundation</strong>: Sweden as hub, Finland/Norway testing</li>
                     <li><strong>International Scale</strong>: EU markets via EUSPA, global climates</li>
